[gd_scene load_steps=2 format=3]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control" script=ExtResource(1)]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NewModuleButton" type="Button" parent="VBoxContainer"]
text = "New Module"

[node name="LoadModuleButton" type="Button" parent="VBoxContainer"]
text = "Load Module"

[node name="ViewAllModulesButton" type="Button" parent="VBoxContainer"]
text = "View All Modules"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
text = "Settings"
